[package]
name = "nylisp_eval"
version = "0.2.5"
edition = "2021"
description = "nylisp evaluation functions library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nylisp_eval"
path = "src/lib.rs"

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }