[package]
name = "nylisp_wasm"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
nylisp_eval = "0.2.5"
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1